[metadata]
name = ros2bridge
author = Bonny Babu
author_email = bonnybabukachappilly@gmail.com
description = A bridge between websocket and DDS of ROS 2
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/bonnybabukachappilly/ros2bridge
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix

[options]
package_dir =
    = src
packages =
    ros2bridge
install_requires = 
    tornado>=5
python_requires = >=3.8

[options.extras_require]
dev =
    flake8>=5.0
    tox>=3.26
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.982
    check-manifest>=0.48
    websocket-client>=1.4


[flake8]
max-line-lenght = 160

[options.package_data]
ros2bridge = py.typed

[options.packages.find]
where = src
